[gd_scene load_steps=6 format=2]

[ext_resource path="res://Riddles/Music_code/message.wav" type="AudioStream" id=1]
[ext_resource path="res://Rooms/hospital/tv/tv.png" type="Texture" id=2]
[ext_resource path="res://Rooms/hospital/tv/tv.gd" type="Script" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "nothing",
"speed": 5.0
}, {
"frames": [  ],
"loop": true,
"name": "coin",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 154.673

[node name="Node2D" type="StaticBody2D"]
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -0.760524, -125.231 )
scale = Vector2( 0.309093, 0.309093 )
frames = SubResource( 1 )
animation = "nothing"

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
position = Vector2( 8.3447, -158.676 )
polygon = PoolVector2Array( -34.5352, -39.4151, -36.2037, 13.3111, 44.2204, 50.0192, 44.8878, -0.370995 )

[node name="Area2D2" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
visible = false
position = Vector2( 16.4217, -134.022 )
shape = SubResource( 2 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 1 )
attenuation = 0.017337
[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_Area2D_mouse_exited"]
[connection signal="body_entered" from="Area2D2" to="." method="_on_Area2D2_body_entered"]
[connection signal="body_exited" from="Area2D2" to="." method="_on_Area2D2_body_exited"]
